# optimus-analysis-framework

./: .flake8  .gitignore  README.md  environment.yml  pyproject.toml
examples/optimus_extensions/: device_db.py  optimus_extensions.py
examples/plotting/plot/: base_failure_chain_length.py  base_failures_heatmap.py  co_occurring_failures.py  failure_magnitude_bars.py  node_importance_score.py  time_to_failure.py  wave_traceback.py
examples/plotting/test_data/: data.py
examples/simulator/: simulations.py
src/oaf/: base_failure.py  data_analysis.py  data_processing.py  failure_depth_analysis.py  util.py
src/oaf/optimus_simulator/: calibration_simulator.py  comparison_funcs.py  hidden_node.py  node.py  utility_node.py  virtual_node.py
src/oaf/plot/: base_failure_chain_length.py  base_failures_heatmap.py  ci_failures_per_time_period.py  ci_parameter.py  ci_time_to_failure.py  co_occuring_failures.py  failure_magnitude_bars.py  node_importance_score.py  time_to_failure.py  wave_traceback.py
src/oaf/spa/: create_ci.py
